--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,93 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{maung2025nodesplittingsvmssurvival,
+  abbr={METRON},
+  author={Maung, Aye Aye
+    and Lazar, Drew
+    and Zheng, Qi},
+  title={Node splitting SVMs for survival trees based on an L2-regularized dipole splitting criteria},
+  journal={METRON},
+  year={2025},
+  month={Nov},
+  day={09},
+  abstract={This paper proposes a novel, node-splitting support vector machine (SVM) for creating survival trees. This approach is capable of nonlinearly partitioning survival data when the data includes continuous, right-censored outcomes. Our method improves on an existing non-parametric method, which uses oblique splits to induce survival regression trees. In this prior work, these oblique splits were created via a non-SVM approach, by minimizing a piecewise linear objective function, called a dipole splitting criterion, constructed from pairs of covariates and their associated survival information. We extend this method by enabling splits from a general class of nonlinear surfaces. We achieve this by ridge regularizing the dipole-splitting criterion to enable application of kernel methods in a manner analogous to classical SVMs. The ridge regularization provides robustness and can be tuned. Using various kernels, we induce both linear and nonlinear survival trees to compare their sizes and predictive powers on real and simulated data sets. We compare traditional univariate log-rank splits, oblique splits using the original dipole-splitting criterion, and a variety of nonlinear splits enabled by our method. In these tests, trees created by nonlinear splits, using polynomial and Gaussian kernels, show similar predictive power while often being of smaller sizes compared to trees created by univariate and oblique splits. This approach provides a novel and flexible array of survival trees that can be applied to diverse survival data sets.},
+  issn={2281-695X},
+  doi={10.1007/s40300-025-00298-7},
+  url={https://doi.org/10.1007/s40300-025-00298-7},
+  selected={true}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+
+@article{Shine2025,
+  author={Shine, Amal
+    and Eisa, Mohamed
+    and Omer, Endashaw
+    and Heckroth, Matthew
+    and Eiswerth, Michael
+    and Rogers, Benjamin
+    and Tennant, Paul
+    and Nguyen, Vincent
+    and Maung, Aye Aye
+    and Kong, Maiying
+    and McClave, Stephen A.},
+  title={Does Increasing Size of Bougienage Improve Response to Esophageal Dilation?},
+  journal={Current Gastroenterology Reports},
+  year={2025},
+  month={Jun},
+  day={11},
+  volume={27},
+  number={1},
+  pages={39},
+  abstract={Because dysphagia occurs when the esophageal luminal diameter is <{\thinspace}13 mm, the traditional goal of dilation is set at 14--16 mm (42--48 Fr) to relieve symptoms. This study was designed to determine whether increasing the size of dilators further would improve durability of response to bougienage.},
+  issn={1534-312X},
+  doi={10.1007/s11894-025-00982-8},
+  url={https://doi.org/10.1007/s11894-025-00982-8}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{00019464-202411000-00007,
+  author={Caminiti, Nicholas
+    and Maung, Aye Aye
+    and Gaskins, Jeremy
+    and Jacobs, Emma
+    and Spry, Catherine
+    and Nath, Suhail
+    and Scoggins, Charles R.
+    and Wilhelmi, Bradon J.
+    and McMasters, Kelly M.
+    and Ajkay, Nicolas},
+  title={Factors Predicting Overnight Admission after Same-Day Mastectomy Protocol and Associated Financial Implications},
+  journal={Journal of the American College of Surgeons},
+  year={2024},
+  volume={239},
+  number={5},
+  abstract={BACKGROUND: Same-day mastectomy (SDM) protocols have been shown to be safe, and their use increased up to 4-fold compared with prepandemic rates. We sought to identify factors that predict overnight patient admission and evaluate the associated cost of care. STUDY DESIGN:  Patients undergoing mastectomy from March 2020 to April 2022 were analyzed. Patient demographics, tumor characteristics, operative details, perioperative factors, 30-day complication, fixed and variable cost, and contribution margin were compared between those who underwent SDM vs those who required overnight admission after mastectomy (OAM). RESULTS:  Of a total of 183 patients with planned SDM, 104 (57{\%}) had SDM and 79 (43{\%}) had OAM. Both groups had similar demographic, tumor, and operative characteristics. Patients who required OAM were more likely to be preoperative opioid users (p = 0.002), have higher American Society of Anesthesiology class (p = 0.028), and more likely to have procedure start time (PST) after 12:00 pm (49{\%} vs 33{\%}, p = 0.033). The rates of 30-day unplanned postoperative events were similar between SDM and OAM. Preoperative opioid user (odds ratio [OR] 3.62, 95{\%} CI 1.56 to 8.40), postanesthesia care unit length of stay greater than 1 hour (OR 1.17, 95{\%} CI 1.01 to 1.37), and PST after 12:00 pm (OR 2.56, 95{\%} CI 1.19 to 5.51) were independent predictors of OAM on multivariate analysis. Both fixed ({\$}5,545 vs {\$}4,909, p = 0.03) and variable costs ({\$}6,426 vs {\$}4,909, p = 0.03) were higher for OAM compared with SDM. Contribution margin was not significantly different between the 2 groups (−{\$}431 SDM vs −{\$}734 OAM, p = 0.46). CONCLUSIONS:  Preoperative opioid use, American Society of Anesthesiology class, longer postanesthesia care unit length of stay, and PST after noon predict a higher likelihood of admission after planned SDM. OAM translated to higher cost but not to decreased profit for the hospital.},
+  issn={1879-1190},
+  url={https://journals.lww.com/journalacs/fulltext/2024/11000/factors_predicting_overnight_admission_after.7.aspx}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+
+@article{Egger2024,
+  author={Egger, Michael E.
+    and Alexander, Evan
+    and Van Meter, Tracy
+    and Kong, Maiying
+    and Maung, Aye Aye
+    and Valdes, Roland
+    and Hall, Melissa Barousse
+    and Linder, Mark W.},
+  title={Corresponding ctDNA and tumor burden dynamics in metastatic melanoma patients on systemic treatment},
+  journal={Translational Oncology},
+  year={2024},
+  month={Apr},
+  day={01},
+  volume={42},
+  pages={101883},
+  keywords={Melanoma; Treatment monitoring; Plasma ctDNA; Tumor burden; Tumor proliferation},
+  abstract={Radiographic imaging is the current standard for monitoring progression of tumor-burden and therapeutic resistance in patients with metastatic melanoma. Plasma circulating tumor DNA (ctDNA) has shown promise as a survelience tool, but longitudinal data on the dynamics between plasma ctDNA concentrations and radiographic imaging is lacking. We evaluated the relationship between longitudinal radiographic measures of tumor burden and ctDNA concentrations in plasma on 30 patients with metastatic melanoma on systemic treatment. In 9 patients with no radiographic evidence of disease over a total of 15 time points, ctDNA concentrations were undetectable. In 21 patients with radiographic tumor burden, ctDNA was detected in 81 {\%} of 58 time points. Plasma ctDNA concentrations demonstrated a modest positive correlation with total tumor burden (TTB) measurements (R2= 0.49, p < 0.001), with the greatest degree of correlation observed under conditions of progressive disease (PD) (R2 = 0.91, p = 0.032). Plasma ctDNA concentrations were significantly greater at times of RECIST v1.1 progression (PD; 22.1 {\%} {\textpm} 5.7 {\%}) when compared to samples collected during stable disease (SD; 4.99 {\%} {\textpm} 3.0 {\%}) (p = 0.012); this difference was independent of total tumor burden (p = 0.997). Changes in plasma ctDNA showed a strong correlation with changes in TTB (R2= 0.88, p<0.001). These data suggest that measurements of plasma ctDNA during therapy are a better surrogate for responding versus non-responding disease compared to absolute tumor burden.},
+  issn={1936-5233},
+  url={https://www.sciencedirect.com/science/article/pii/S1936523324000093}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
