--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,7 @@
 
 
 @article{Shine2025,
+  abbr={Curr. Gastroenterol. Rep.},
   author={Shine, Amal
     and Eisa, Mohamed
     and Omer, Endashaw
@@ -48,6 +49,7 @@
 
 
 @article{00019464-202411000-00007,
+  abbr={JACS},
   author={Caminiti, Nicholas
     and Maung, Aye Aye
     and Gaskins, Jeremy
@@ -70,6 +72,7 @@
 
 
 @article{Egger2024,
+  abbr={Transl. Oncol.},
   author={Egger, Michael E.
     and Alexander, Evan
     and Van Meter, Tracy
@@ -88,6 +91,7 @@
   keywords={Melanoma; Treatment monitoring; Plasma ctDNA; Tumor burden; Tumor proliferation},
   abstract={Radiographic imaging is the current standard for monitoring progression of tumor-burden and therapeutic resistance in patients with metastatic melanoma. Plasma circulating tumor DNA (ctDNA) has shown promise as a survelience tool, but longitudinal data on the dynamics between plasma ctDNA concentrations and radiographic imaging is lacking. We evaluated the relationship between longitudinal radiographic measures of tumor burden and ctDNA concentrations in plasma on 30 patients with metastatic melanoma on systemic treatment. In 9 patients with no radiographic evidence of disease over a total of 15 time points, ctDNA concentrations were undetectable. In 21 patients with radiographic tumor burden, ctDNA was detected in 81 {\%} of 58 time points. Plasma ctDNA concentrations demonstrated a modest positive correlation with total tumor burden (TTB) measurements (R2= 0.49, p < 0.001), with the greatest degree of correlation observed under conditions of progressive disease (PD) (R2 = 0.91, p = 0.032). Plasma ctDNA concentrations were significantly greater at times of RECIST v1.1 progression (PD; 22.1 {\%} {\textpm} 5.7 {\%}) when compared to samples collected during stable disease (SD; 4.99 {\%} {\textpm} 3.0 {\%}) (p = 0.012); this difference was independent of total tumor burden (p = 0.997). Changes in plasma ctDNA showed a strong correlation with changes in TTB (R2= 0.88, p<0.001). These data suggest that measurements of plasma ctDNA during therapy are a better surrogate for responding versus non-responding disease compared to absolute tumor burden.},
   issn={1936-5233},
-  url={https://www.sciencedirect.com/science/article/pii/S1936523324000093}
+  url={https://www.sciencedirect.com/science/article/pii/S1936523324000093},
+  selected={true}
 }
 
