--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,6 +65,7 @@
   number={5},
   abstract={BACKGROUND: Same-day mastectomy (SDM) protocols have been shown to be safe, and their use increased up to 4-fold compared with prepandemic rates. We sought to identify factors that predict overnight patient admission and evaluate the associated cost of care. STUDY DESIGN:  Patients undergoing mastectomy from March 2020 to April 2022 were analyzed. Patient demographics, tumor characteristics, operative details, perioperative factors, 30-day complication, fixed and variable cost, and contribution margin were compared between those who underwent SDM vs those who required overnight admission after mastectomy (OAM). RESULTS:  Of a total of 183 patients with planned SDM, 104 (57{\%}) had SDM and 79 (43{\%}) had OAM. Both groups had similar demographic, tumor, and operative characteristics. Patients who required OAM were more likely to be preoperative opioid users (p = 0.002), have higher American Society of Anesthesiology class (p = 0.028), and more likely to have procedure start time (PST) after 12:00 pm (49{\%} vs 33{\%}, p = 0.033). The rates of 30-day unplanned postoperative events were similar between SDM and OAM. Preoperative opioid user (odds ratio [OR] 3.62, 95{\%} CI 1.56 to 8.40), postanesthesia care unit length of stay greater than 1 hour (OR 1.17, 95{\%} CI 1.01 to 1.37), and PST after 12:00 pm (OR 2.56, 95{\%} CI 1.19 to 5.51) were independent predictors of OAM on multivariate analysis. Both fixed ({\$}5,545 vs {\$}4,909, p = 0.03) and variable costs ({\$}6,426 vs {\$}4,909, p = 0.03) were higher for OAM compared with SDM. Contribution margin was not significantly different between the 2 groups (−{\$}431 SDM vs −{\$}734 OAM, p = 0.46). CONCLUSIONS:  Preoperative opioid use, American Society of Anesthesiology class, longer postanesthesia care unit length of stay, and PST after noon predict a higher likelihood of admission after planned SDM. OAM translated to higher cost but not to decreased profit for the hospital.},
   issn={1879-1190},
+  doi={10.1097/XCS.0000000000001164},
   url={https://journals.lww.com/journalacs/fulltext/2024/11000/factors_predicting_overnight_admission_after.7.aspx}
 }
 
@@ -89,6 +90,7 @@
   keywords={Melanoma; Treatment monitoring; Plasma ctDNA; Tumor burden; Tumor proliferation},
   abstract={Radiographic imaging is the current standard for monitoring progression of tumor-burden and therapeutic resistance in patients with metastatic melanoma. Plasma circulating tumor DNA (ctDNA) has shown promise as a survelience tool, but longitudinal data on the dynamics between plasma ctDNA concentrations and radiographic imaging is lacking. We evaluated the relationship between longitudinal radiographic measures of tumor burden and ctDNA concentrations in plasma on 30 patients with metastatic melanoma on systemic treatment. In 9 patients with no radiographic evidence of disease over a total of 15 time points, ctDNA concentrations were undetectable. In 21 patients with radiographic tumor burden, ctDNA was detected in 81 {\%} of 58 time points. Plasma ctDNA concentrations demonstrated a modest positive correlation with total tumor burden (TTB) measurements (R2= 0.49, p < 0.001), with the greatest degree of correlation observed under conditions of progressive disease (PD) (R2 = 0.91, p = 0.032). Plasma ctDNA concentrations were significantly greater at times of RECIST v1.1 progression (PD; 22.1 {\%} {\textpm} 5.7 {\%}) when compared to samples collected during stable disease (SD; 4.99 {\%} {\textpm} 3.0 {\%}) (p = 0.012); this difference was independent of total tumor burden (p = 0.997). Changes in plasma ctDNA showed a strong correlation with changes in TTB (R2= 0.88, p<0.001). These data suggest that measurements of plasma ctDNA during therapy are a better surrogate for responding versus non-responding disease compared to absolute tumor burden.},
   issn={1936-5233},
+  doi={10.1016/j.tranon.2024.101883},
   url={https://www.sciencedirect.com/science/article/pii/S1936523324000093},
   selected={true}
 }
