--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,36 +18,8 @@
   selected={true}
 }
 
-
-
-@article{Shine2025,
-  author={Shine, Amal
-    and Eisa, Mohamed
-    and Omer, Endashaw
-    and Heckroth, Matthew
-    and Eiswerth, Michael
-    and Rogers, Benjamin
-    and Tennant, Paul
-    and Nguyen, Vincent
-    and Maung, Aye Aye
-    and Kong, Maiying
-    and McClave, Stephen A.},
-  title={Does Increasing Size of Bougienage Improve Response to Esophageal Dilation?},
-  journal={Current Gastroenterology Reports},
-  year={2025},
-  month={Jun},
-  day={11},
-  volume={27},
-  number={1},
-  pages={39},
-  abstract={Because dysphagia occurs when the esophageal luminal diameter is <{\thinspace}13 mm, the traditional goal of dilation is set at 14--16 mm (42--48 Fr) to relieve symptoms. This study was designed to determine whether increasing the size of dilators further would improve durability of response to bougienage.},
-  issn={1534-312X},
-  doi={10.1007/s11894-025-00982-8},
-  url={https://doi.org/10.1007/s11894-025-00982-8}
-}
-
-
 @article{00019464-202411000-00007,
+  abbr={JACS},
   author={Caminiti, Nicholas
     and Maung, Aye Aye
     and Gaskins, Jeremy
@@ -66,9 +38,9 @@
   abstract={BACKGROUND: Same-day mastectomy (SDM) protocols have been shown to be safe, and their use increased up to 4-fold compared with prepandemic rates. We sought to identify factors that predict overnight patient admission and evaluate the associated cost of care. STUDY DESIGN:  Patients undergoing mastectomy from March 2020 to April 2022 were analyzed. Patient demographics, tumor characteristics, operative details, perioperative factors, 30-day complication, fixed and variable cost, and contribution margin were compared between those who underwent SDM vs those who required overnight admission after mastectomy (OAM). RESULTS:  Of a total of 183 patients with planned SDM, 104 (57{\%}) had SDM and 79 (43{\%}) had OAM. Both groups had similar demographic, tumor, and operative characteristics. Patients who required OAM were more likely to be preoperative opioid users (p = 0.002), have higher American Society of Anesthesiology class (p = 0.028), and more likely to have procedure start time (PST) after 12:00 pm (49{\%} vs 33{\%}, p = 0.033). The rates of 30-day unplanned postoperative events were similar between SDM and OAM. Preoperative opioid user (odds ratio [OR] 3.62, 95{\%} CI 1.56 to 8.40), postanesthesia care unit length of stay greater than 1 hour (OR 1.17, 95{\%} CI 1.01 to 1.37), and PST after 12:00 pm (OR 2.56, 95{\%} CI 1.19 to 5.51) were independent predictors of OAM on multivariate analysis. Both fixed ({\$}5,545 vs {\$}4,909, p = 0.03) and variable costs ({\$}6,426 vs {\$}4,909, p = 0.03) were higher for OAM compared with SDM. Contribution margin was not significantly different between the 2 groups (−{\$}431 SDM vs −{\$}734 OAM, p = 0.46). CONCLUSIONS:  Preoperative opioid use, American Society of Anesthesiology class, longer postanesthesia care unit length of stay, and PST after noon predict a higher likelihood of admission after planned SDM. OAM translated to higher cost but not to decreased profit for the hospital.},
   issn={1879-1190},
   doi={10.1097/XCS.0000000000001164},
-  url={https://journals.lww.com/journalacs/fulltext/2024/11000/factors_predicting_overnight_admission_after.7.aspx}
+  url={https://journals.lww.com/journalacs/fulltext/2024/11000/factors_predicting_overnight_admission_after.7.aspx},
+  selected={true}
 }
-
 
 @article{Egger2024,
   abbr={Transl. Oncol.},
@@ -94,4 +66,3 @@
   url={https://www.sciencedirect.com/science/article/pii/S1936523324000093},
   selected={true}
 }
-
