--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{maung2025nodesplittingsvmssurvival,
+@article{Maung2025,
   abbr={METRON},
   author={Maung, Aye Aye
     and Lazar, Drew
@@ -9,8 +9,11 @@
   title={Node splitting SVMs for survival trees based on an L2-regularized dipole splitting criteria},
   journal={METRON},
   year={2025},
-  month={Nov},
-  day={09},
+  month={Dec},
+  day={01},
+  volume={83},
+  number={3},
+  pages={285-312},
   abstract={This paper proposes a novel, node-splitting support vector machine (SVM) for creating survival trees. This approach is capable of nonlinearly partitioning survival data when the data includes continuous, right-censored outcomes. Our method improves on an existing non-parametric method, which uses oblique splits to induce survival regression trees. In this prior work, these oblique splits were created via a non-SVM approach, by minimizing a piecewise linear objective function, called a dipole splitting criterion, constructed from pairs of covariates and their associated survival information. We extend this method by enabling splits from a general class of nonlinear surfaces. We achieve this by ridge regularizing the dipole-splitting criterion to enable application of kernel methods in a manner analogous to classical SVMs. The ridge regularization provides robustness and can be tuned. Using various kernels, we induce both linear and nonlinear survival trees to compare their sizes and predictive powers on real and simulated data sets. We compare traditional univariate log-rank splits, oblique splits using the original dipole-splitting criterion, and a variety of nonlinear splits enabled by our method. In these tests, trees created by nonlinear splits, using polynomial and Gaussian kernels, show similar predictive power while often being of smaller sizes compared to trees created by univariate and oblique splits. This approach provides a novel and flexible array of survival trees that can be applied to diverse survival data sets.},
   issn={2281-695X},
   doi={10.1007/s40300-025-00298-7},
